--- a/IntroProject/index.html
+++ b/IntroProject/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type = "text/css" href="css/style.css">
-<title>index.html</title>
+	<link rel="stylesheet" href="css/style.css">
+	<title>index.html</title>
 </head>
 <body>
 	<p>Hello World!</p>
